# rust_social_api

./: Cargo.toml
