[package]
name = "rust_social_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
actix-cors = "0.6.1"
actix-rt = "2.7.0"
mongodb = "2.2.2"
bson = "2.3.0"
serde = "1.0.138"
serde_json = "1.0.82"
futures = "0.3.21"
dotenv = "0.15.0"
env_logger = "0.9.0"